# Airi-Cpp-Server-Lib

./: .clangd  .gitignore  CMakeLists.txt  README.md
AGENT_MEMORY/: INTERVIEW_NOTES.md  PLAN.md
HISTORY/day30.5/: day30.5-项目结构与运行时全景梳理.md
HISTORY/day30.5/dev-log/: day30.5-项目结构与运行时全景梳理.md
HISTORY/day31/: CMakeLists.txt  README.md
HISTORY/day31/monitoring/: docker-compose.yml
HISTORY/day31/src/common/net/: Connection.cpp
HISTORY/day31/src/include/rpc/: RpcClient.h  RpcServer.h
HISTORY/day32/: .gitignore  CMakeLists.txt
HISTORY/day32.5/examples/src/: http_server.cpp
HISTORY/day32.5/monitoring/: prometheus.yml
HISTORY/day32.5/scripts/: flamegraph.sh  instruments_profile.sh
HISTORY/day32.5/src/common/net/: Acceptor.cpp  TcpServer.cpp
HISTORY/day32.5/src/common/rpc/: RpcMessage.cpp  RpcServer.cpp
HISTORY/day32.5/src/include/net/: Connection.h
HISTORY/day32.5/src/include/rpc/: AsyncRpcClient.h
HISTORY/day32/examples/src/: raft_demo.cpp
HISTORY/day32/monitoring/grafana/dashboards/: airi.json
HISTORY/day32/src/common/http/: HttpServer.cpp
HISTORY/day32/src/common/net/: Connection.cpp  Eventloop.cpp  TcpServer.cpp
HISTORY/day32/src/common/net/Poller/epoll/: EpollPoller.cpp
HISTORY/day32/src/common/raft/: RaftNode.cpp
HISTORY/day32/src/common/rpc/: AsyncRpcClient.cpp
HISTORY/day32/src/include/net/: SignalHandler.h
HISTORY/day32/src/include/raft/: RaftNode.h
HISTORY/day32/src/include/rpc/: AsyncRpcClient.h  RpcServer.h
app_example/: CMakeLists.txt
benchmark/: HOTSPOT_ANALYSIS.md
benchmark/flamegraph/: sample_wrk30s.txt
dev-log/: README.md  day29-生产特性.md  day30.5-项目结构与运行时全景梳理.md  day31-RPC基础.md  day31-WebSocket支持.md  day32-C++20协程IO.md  day32-Raft选举与异步RPC重构.md  day32.5-C++20协程重构.md  day33-Raft日志复制.md  day33-io_uring后端.md  day34-无锁队列与WorkStealing线程池.md  day35-内存池.md  day36-与muduo横向对比.md  day37-RPC基础.md  日志模板规范.md
examples/src/: http_server.cpp  raft_demo.cpp  rpc_demo.cpp
monitoring/grafana/provisioning/dashboards/: airi.yml
scripts/: bench.sh
src/common/http/: HttpServer.cpp
src/common/net/: Connection.cpp  Eventloop.cpp  SignalHandler.cpp  TcpServer.cpp
src/common/raft/: RaftNode.cpp
src/common/rpc/: AsyncRpcClient.cpp  RpcClient.cpp  RpcMessage.cpp  RpcServer.cpp
src/include/coro/: Task.h
src/include/net/: TcpServer.h
src/include/raft/: RaftNode.h  RaftTypes.h
src/include/rpc/: RpcMessage.h
